--- a/lifeManager/app/src/main/res/layout/activity_main.xml
+++ b/lifeManager/app/src/main/res/layout/activity_main.xml
@@ -18,118 +18,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
     <Button
-        android:id="@+id/buttonSchedule"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignEnd="@+id/intro_text"
         android:layout_alignParentBottom="true"
-        android:onClick="launchScheduleActivity"
-        android:text="@string/button_schedule" />
+        android:layout_marginBottom="107dp"
+        android:onClick="openNewEvent"
+        android:text="Button" />
 
-    <Button
-        android:id="@+id/buttonAnalytics"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:onClick="launchAnalyticsActivity"
-        android:text="@string/button_analytics" />
-
-    <Spinner
-        android:id="@+id/listOfActivities"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/intro_text"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:entries="@array/listOfActivities"/>
-
-    <Button
-        android:id="@+id/toggleStart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/listOfActivities"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:text="@string/buttonStart"
-        android:visibility="visible"
-        android:onClick="toggleSelectedActivity"
-        />
-
-    <Button
-        android:id="@+id/toggleStop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/listOfActivities"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:text="@string/buttonStop"
-        android:visibility="invisible"
-        android:onClick="toggleSelectedActivity"
-        />
-
-
-    <Button
-        android:id="@+id/enterStartTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toggleStop"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:onClick="showTimePickerDialog"
-        android:text="@string/enterStart" />
-
-    <Button
-        android:id="@+id/enterStartDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/toggleStop"
-        android:layout_toEndOf="@+id/enterStartTime"
-        android:layout_toRightOf="@+id/enterStartTime"
-        android:onClick="showTimePickerDialog"
-        android:text="@string/enterStartDate" />
-
-    <Button
-        android:id="@+id/enterEndTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/enterStartTime"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:onClick="showTimePickerDialog"
-        android:text="@string/enterEnd" />
-
-    <Button
-        android:id="@+id/EnterEndDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/enterStartTime"
-        android:layout_toEndOf="@+id/enterStartTime"
-        android:layout_toRightOf="@+id/enterStartTime"
-        android:onClick="showTimePickerDialog"
-        android:text="@string/enterEndDate" />
-
-    <Button
-        android:id="@+id/storeTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/enterEndTime"
-        android:layout_alignParentStart="true"
-        android:text="Enter" />
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/navigation" />
 
 </RelativeLayout>
