--- a/lifeManager/app/src/main/res/layout/fragment_new_event.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_new_event.xml
@@ -6,12 +6,6 @@
     tools:context=".newEvent">
 
     <!-- TODO: Update blank fragment layout -->
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:text="@string/newevent" />-->
     <EditText
         android:id="@+id/editTextTitle"
         android:layout_width="wrap_content"
@@ -128,7 +122,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:onClick="showDatePickerDialog"
+        android:onClick="onClick"
         android:textSize="16sp"
         android:text="@string/defaultDate" />
 
@@ -164,7 +158,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:textSize="16sp"
-        android:onClick="showTimePickerDialog"
+        android:onClick="onClick"
         android:text="@string/defaultStart" />
 
     <TextView
@@ -189,7 +183,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:textSize="16sp"
-        android:onClick="showTimePickerDialog"
+        android:onClick="onClick"
         android:text="@string/defaultEnd" />
 
     <View
