--- a/lifeManager/app/src/main/res/layout/activity_main.xml
+++ b/lifeManager/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,11 @@
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/navigation"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_weight="1"/>
 
     <android.support.design.widget.BottomNavigationView
