--- a/lifeManager/app/src/main/res/layout/activity_main.xml
+++ b/lifeManager/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_weight="1"/>
 
+
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
         android:layout_width="0dp"
@@ -26,5 +27,18 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
+
+
+    <!--<Button-->
+        <!--android:id="@+id/button"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignEnd="@+id/intro_text"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_marginEnd="-49dp"-->
+        <!--android:layout_marginBottom="117dp"-->
+        <!--android:onClick="openNewEvent"-->
+        <!--android:text="Button" />-->
+
 
 </android.support.constraint.ConstraintLayout>
