--- a/lifeManager/app/src/main/res/menu/card_menu.xml
+++ b/lifeManager/app/src/main/res/menu/card_menu.xml
@@ -2,28 +2,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="edu.calvin.cs262.pjh26.lab04.MainActivity">
-    <item
-        android:id="@+id/action_contact"
-        android:orderInCategory="100"
-        android:title="@string/action_contact"
-        app:showAsAction="never" />
+
 
     <item
-        android:id="@+id/action_order"
+        android:id="@+id/action_view"
         android:orderInCategory="10"
-        android:title="@string/action_order"
+        android:title="View Details"
         app:showAsAction="never"/>
 
     <item
-        android:id="@+id/action_status"
+        android:id="@+id/action_edit"
         android:orderInCategory="20"
-        android:title="@string/action_status"
+        android:title="Edit"
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/action_favorites"
+        android:id="@+id/action_share"
+        android:orderInCategory="30"
+        android:title="Share"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_delete"
         android:orderInCategory="40"
-        android:title="@string/action_favorites"
+        android:title="Delete"
         app:showAsAction="never" />
 
 </menu>
