--- a/lifeManager/app/src/main/res/layout/fragment_analytics.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_analytics.xml
@@ -17,6 +17,7 @@
     android:id="@+id/todayTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+        android:padding="5dp"
     android:text="Today"
     android:textSize="24sp"
     />
@@ -25,13 +26,15 @@
         android:id="@+id/today"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/todayTextView"/>
+        android:layout_below="@+id/todayTextView"
+        android:padding="5dp"/>
 
     <TextView
         android:id="@+id/yesterdayTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/today"
+        android:padding="5dp"
         android:text="Yesterday"
         android:textSize="24sp"
         />
@@ -39,12 +42,14 @@
         android:id="@+id/yesterday"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/yesterdayTextView"/>
+        android:layout_below="@+id/yesterdayTextView"
+        android:padding="5dp"/>
     <TextView
         android:id="@+id/thisMonthTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/yesterday"
+        android:padding="5dp"
         android:text="This Month"
         android:textSize="24sp"
         />
@@ -52,7 +57,8 @@
         android:id="@+id/thisMonth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/thisMonthTextView"/>
+        android:layout_below="@+id/thisMonthTextView"
+        android:padding="5dp"/>
 
     <!--<ListView-->
         <!--android:id="@+id/todayListView"-->
