--- a/lifeManager/app/src/main/res/layout/activity_main.xml
+++ b/lifeManager/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".MainActivity">
 
     <FrameLayout
@@ -30,15 +31,15 @@
 
 
     <!--<Button-->
-        <!--android:id="@+id/button"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignEnd="@+id/intro_text"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_marginEnd="-49dp"-->
-        <!--android:layout_marginBottom="117dp"-->
-        <!--android:onClick="openNewEvent"-->
-        <!--android:text="Button" />-->
+    <!--android:id="@+id/button"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignEnd="@+id/intro_text"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!--android:layout_marginEnd="-49dp"-->
+    <!--android:layout_marginBottom="117dp"-->
+    <!--android:onClick="openNewEvent"-->
+    <!--android:text="Button" />-->
 
 
 </android.support.constraint.ConstraintLayout>
