--- a/lifeManager/app/src/main/res/layout/fragment_analytics.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_analytics.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".Analytics">
 
     <!-- TODO: Update blank fragment layout -->
@@ -17,6 +18,7 @@
     android:id="@+id/todayTextView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+        android:textColor="@color/colorText"
         android:padding="5dp"
     android:text="Today"
     android:textSize="24sp"
@@ -27,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/todayTextView"
+        android:textColor="@color/colorText"
         android:padding="5dp"/>
 
     <TextView
@@ -35,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/today"
         android:padding="5dp"
+        android:textColor="@color/colorText"
         android:text="Yesterday"
         android:textSize="24sp"
         />
@@ -43,12 +47,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/yesterdayTextView"
+        android:textColor="@color/colorText"
         android:padding="5dp"/>
     <TextView
         android:id="@+id/thisMonthTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/yesterday"
+        android:textColor="@color/colorText"
         android:padding="5dp"
         android:text="This Month"
         android:textSize="24sp"
@@ -57,6 +63,7 @@
         android:id="@+id/thisMonth"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorText"
         android:layout_below="@+id/thisMonthTextView"
         android:padding="5dp"/>
 
