--- a/lifeManager/app/src/main/res/layout/schedule_card_editor.xml
+++ b/lifeManager/app/src/main/res/layout/schedule_card_editor.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
     <EditText
         android:id="@+id/editTextTitle"
@@ -15,6 +16,7 @@
         android:textSize="24sp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="@color/colorAccent"
         android:hint="@string/titleHint" />
 
     <TextView
@@ -27,6 +29,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:textSize="16sp"
+        android:textColor="@color/colorText"
         android:text="@string/choose_an_area" />
 
     <View
@@ -36,6 +39,7 @@
         android:layout_marginEnd="8dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:textColor="@color/colorText"
         android:background="@android:color/darker_gray"/>
 
     <RadioGroup
@@ -43,47 +47,64 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/line1"
-        android:orientation="horizontal"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true" >
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="-2dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginRight="14dp"
+        android:orientation="horizontal"
+        android:textColor="@color/colorText">
+
         <RadioButton
             android:id="@+id/direct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/direct" />
+            android:text="@string/direct"
+            android:textColor="@color/colorText" />
+
         <RadioButton
             android:id="@+id/indirect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/indirect" />
+            android:text="@string/indirect"
+            android:textColor="@color/colorText" />
 
         <RadioButton
             android:id="@+id/personal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/personal" />
+            android:text="@string/personal"
+            android:textColor="@color/colorText" />
 
         <RadioButton
             android:id="@+id/selfDev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/self_dev" />
+            android:text="@string/self_dev"
+            android:textColor="@color/colorText" />
 
         <RadioButton
             android:id="@+id/etc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/etc" />
+            android:layout_width="65dp"
+            android:layout_height="match_parent"
+            android:text="@string/etc"
+            android:textColor="@color/colorText" />
     </RadioGroup>
 
     <View
         android:id="@+id/line2"
-        android:layout_below="@+id/eventCategory"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:layout_below="@+id/eventCategory"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="-1dp"
+        android:layout_marginEnd="8dp"
+        android:background="@android:color/darker_gray"
+        android:textColor="@color/colorText" />
 
     <EditText
         android:id="@+id/editTextActivity"
@@ -95,6 +116,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:ems="12"
+        android:textColor="@color/colorText"
         android:hint="@string/activityHint"
         android:textSize="16sp" />
 
@@ -108,6 +130,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:textSize="16sp"
+        android:textColor="@color/colorText"
         android:text="@string/date" />
 
     <TextView
@@ -121,6 +144,7 @@
         android:layout_marginRight="8dp"
         android:onClick="onClick"
         android:textSize="16sp"
+        android:textColor="@color/colorText"
         android:text="@string/defaultDate" />
 
     <View
@@ -131,6 +155,7 @@
         android:layout_marginVertical="3dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:textColor="@color/colorText"
         android:background="@android:color/darker_gray"/>
 
     <TextView
@@ -143,6 +168,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:textSize="16sp"
+        android:textColor="@color/colorText"
         android:text="@string/start" />
 
     <TextView
@@ -156,6 +182,7 @@
         android:layout_marginRight="8dp"
         android:textSize="16sp"
         android:onClick="onClick"
+        android:textColor="@color/colorText"
         android:text="@string/defaultStart" />
 
     <TextView
@@ -168,6 +195,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:textSize="16sp"
+        android:textColor="@color/colorText"
         android:text="@string/end" />
 
     <TextView
@@ -181,6 +209,7 @@
         android:layout_marginRight="8dp"
         android:textSize="16sp"
         android:onClick="onClick"
+        android:textColor="@color/colorText"
         android:text="@string/defaultEnd" />
 
     <View
@@ -190,6 +219,7 @@
         android:layout_marginEnd="8dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:textColor="@color/colorText"
         android:background="@android:color/darker_gray"/>
 
     <EditText
@@ -201,6 +231,7 @@
         android:layout_alignParentLeft="true"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="@color/colorText"
         android:hint="@string/lableHint" />
 
     <EditText
@@ -212,15 +243,20 @@
         android:layout_alignParentLeft="true"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="@color/colorText"
         android:hint="@string/noteHint" />
 
     <Button
         android:id="@+id/enterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="135dp"
-        android:text="Enter" />
+        android:layout_marginEnd="13dp"
+        android:layout_marginRight="13dp"
+        android:layout_marginBottom="21dp"
+        android:text="Enter"
+        android:textColor="@color/colorText" />
 
 </RelativeLayout>
