--- a/lifeManager/app/src/main/res/layout/fragment_schedule_list.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_schedule_list.xml
@@ -44,18 +44,18 @@
                 android:layout_alignParentLeft="true"
                 android:text="@string/timeText" />
 
-            <TextView
-                android:id="@+id/textViewOptions"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginVertical="8dp"
-                android:text="   &#8942;   "
-                android:onClick="openOptions"
-                android:textSize="30sp"
-                android:textAppearance="?android:textAppearanceLarge" />
+            <!--<TextView-->
+                <!--android:id="@+id/textViewOptions"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_alignParentEnd="true"-->
+                <!--android:layout_alignParentTop="true"-->
+                <!--android:layout_marginVertical="8dp"-->
+                <!--android:text="   &#8942;   "-->
+                <!--android:onClick="openOptions"-->
+                <!--android:textSize="30sp"-->
+                <!--android:textAppearance="?android:textAppearanceLarge" />-->
 
         </RelativeLayout>
 
