--- a/lifeManager/app/src/main/res/layout/fragment_schedule.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_schedule.xml
@@ -6,9 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".ScheduleFragment">
 
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pickDateText"/>
+
+
+
+    <TextView
+        android:id="@+id/pickDateText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:text="Date"
+        android:textSize="35sp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+
 
 </RelativeLayout>
