--- a/lifeManager/app/src/main/res/layout/fragment_schedule.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_schedule.xml
@@ -22,15 +22,19 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/confirmDate"
         android:text="Date"
-        android:textSize="35sp" />
+        android:textSize="30sp" />
 
     <Button
+        android:id="@+id/confirmDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:onClick="reloadSchedule"
+        android:text="Confirm Date"/>
 
 
 </RelativeLayout>
