showing a dialog for online help docs

--- a/lifeManager/app/src/main/res/layout/activity_main.xml
+++ b/lifeManager/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/navigation"
         android:layout_margin="10dp"
+        android:onClick="helpButton"
 
         />
 
