--- a/lifeManager/app/src/main/res/layout/fragment_analytics.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_analytics.xml
@@ -14,57 +14,101 @@
         <!--android:layout_centerVertical="true"-->
         <!--android:text="@string/analyticst" /> -->
 
-    <TextView
-        android:id="@+id/todayTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorText"
-        android:padding="5dp"
-        android:text="Today"
-        android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/today"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/todayTextView"
-        android:textColor="@color/colorText"
-        android:padding="5dp"/>
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true">
 
-    <TextView
-        android:id="@+id/yesterdayTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/today"
-        android:padding="5dp"
-        android:textColor="@color/colorText"
-        android:text="Yesterday"
-        android:textSize="24sp"
-        />
-    <TextView
-        android:id="@+id/yesterday"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/yesterdayTextView"
-        android:textColor="@color/colorText"
-        android:padding="5dp"/>
-    <TextView
-        android:id="@+id/thisMonthTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/yesterday"
-        android:textColor="@color/colorText"
-        android:padding="5dp"
-        android:text="This Month"
-        android:textSize="24sp"
-        />
-    <TextView
-        android:id="@+id/thisMonth"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorText"
-        android:layout_below="@+id/thisMonthTextView"
-        android:padding="5dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/todayTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorText"
+                android:padding="5dp"
+                android:text="Today"
+                android:textSize="45sp" />
+
+            <TextView
+                android:id="@+id/today"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/todayTextView"
+                android:textColor="@color/colorText"
+                android:textSize="20sp"
+                android:padding="5dp"/>
+
+            <TextView
+                android:id="@+id/yesterdayTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/today"
+                android:padding="5dp"
+                android:textColor="@color/colorText"
+                android:text="Yesterday"
+                android:textSize="45sp" />
+            <TextView
+                android:id="@+id/yesterday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/yesterdayTextView"
+                android:textColor="@color/colorText"
+                android:textSize="20sp"
+                android:padding="5dp"/>
+
+            <TextView
+                android:id="@+id/thisWeekTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:textColor="@color/colorText"
+                android:padding="5dp"
+                android:textSize="45sp"
+                android:layout_below="@+id/yesterday"
+                android:text="Past Week" />
+
+            <TextView
+                android:id="@+id/pastWeek"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/thisWeekTextView"
+                android:textColor="@color/colorText"
+                android:textSize="20sp"
+                android:padding="5dp"/>
+
+            <TextView
+                android:id="@+id/thisMonthTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/pastWeek"
+                android:textColor="@color/colorText"
+                android:padding="5dp"
+                android:text="This Month"
+                android:textSize="45sp" />
+
+            <TextView
+                android:id="@+id/thisMonth"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorText"
+                android:layout_below="@+id/thisMonthTextView"
+                android:textSize="20sp"
+                android:padding="5dp"/>
+
+        </RelativeLayout>
+    </ScrollView>
+
 
     <!--<ListView-->
         <!--android:id="@+id/todayListView"-->
