update textSize, catch error, and navigation order

--- a/lifeManager/app/src/main/res/layout/fragment_schedule.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_schedule.xml
@@ -24,9 +24,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:padding="@dimen/padding_regular"
         android:layout_toLeftOf="@+id/confirmDate"
         android:text="Date"
-        android:textSize="30sp" />
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/confirmDate"
@@ -35,6 +36,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:padding="@dimen/padding_regular"
         android:onClick="reloadSchedule"
         android:text="Confirm Date"/>
 
