--- a/lifeManager/app/src/main/res/layout/fragment_new_event.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_new_event.xml
@@ -15,8 +15,9 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
+        android:padding="@dimen/padding_regular"
         android:layout_alignParentTop="true"
-        android:textSize="24sp"
+        android:textSize="35sp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="@color/colorText"
@@ -31,7 +32,8 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:textSize="16sp"
+        android:padding="@dimen/padding_regular"
+        android:textSize="@dimen/textSize"
         android:textColor="@color/colorText"
         android:text="@string/choose_an_area" />
 
@@ -53,6 +55,7 @@
         android:orientation="horizontal"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:padding="@dimen/padding_regular"
         android:textColor="@color/colorText">
         <RadioButton
             android:id="@+id/direct"
@@ -108,10 +111,11 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
+        android:padding="@dimen/padding_regular"
         android:ems="12"
         android:hint="@string/activityHint"
         android:textColor="@color/colorText"
-        android:textSize="16sp" />
+        android:textSize="@dimen/textSize" />
 
     <TextView
         android:id="@+id/date"
@@ -122,7 +126,8 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:textSize="16sp"
+        android:padding="@dimen/padding_regular"
+        android:textSize="@dimen/textSize"
         android:textColor="@color/colorText"
         android:text="@string/date" />
 
@@ -135,8 +140,9 @@
         android:layout_alignParentRight="true"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:padding="@dimen/padding_regular"
         android:onClick="onClick"
-        android:textSize="16sp"
+        android:textSize="@dimen/textSize"
         android:textColor="@color/colorText"
         android:text="@string/defaultDate" />
 
@@ -160,7 +166,8 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:textSize="16sp"
+        android:padding="@dimen/padding_regular"
+        android:textSize="@dimen/textSize"
         android:textColor="@color/colorText"
         android:text="@string/start" />
 
@@ -173,7 +180,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:textSize="16sp"
+        android:padding="@dimen/padding_regular"
+        android:textSize="@dimen/textSize"
         android:onClick="onClick"
         android:textColor="@color/colorText"
         android:text="@string/defaultStart" />
@@ -187,7 +195,8 @@
         android:layout_alignParentLeft="true"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:textSize="16sp"
+        android:padding="@dimen/padding_regular"
+        android:textSize="@dimen/textSize"
         android:textColor="@color/colorText"
         android:text="@string/end" />
 
@@ -200,7 +209,8 @@
         android:layout_alignParentRight="true"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:textSize="16sp"
+        android:padding="@dimen/padding_regular"
+        android:textSize="@dimen/textSize"
         android:onClick="onClick"
         android:textColor="@color/colorText"
         android:text="@string/defaultEnd" />
@@ -222,6 +232,8 @@
         android:layout_below="@+id/line5"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:padding="@dimen/padding_regular"
+        android:textSize="@dimen/textSize"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="@color/colorText"
@@ -234,6 +246,8 @@
         android:layout_below="@+id/editTextLabel"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
+        android:padding="@dimen/padding_regular"
+        android:textSize="@dimen/textSize"
         android:ems="10"
         android:inputType="textPersonName"
         android:textColor="@color/colorText"
