--- a/lifeManager/app/src/main/res/values/dimens.xml
+++ b/lifeManager/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="padding_regular">10dp</dimen>
+    <dimen name="textSize">20sp</dimen>
 </resources>
